--- a/flatui/mixin.less
+++ b/flatui/mixin.less
@@ -212,22 +212,69 @@
 /* #Radio Buttons
 ================================================== */
 .numInput(@color: @midnightblue) {
-    input::-webkit-outer-spin-button,
-    input::-webkit-inner-spin-button,
-    input {
-        -webkit-appearance: none;
-    }
-    input {
+//    input[type="number"],
+//    input::-webkit-inner-spin-button,
+//    input::-webkit-outer-spin-button {
+//        -webkit-appearance: none;   
+//    }
+//    input[type="number"]::-webkit-inner-spin-button {
+//        position: relative;
+//        margin-left: 5px;
+//    }   
+//    input[type="number"]::-webkit-inner-spin-button:before {
+//        position: absolute;
+//        .size(5px,5px);
+//        margin-right: 5px; 
+//        content: url("flatui/images/upArrow.png");
+//        
+//    }
+//    input[type="number"]::-webkit-inner-spin-button:after {
+//        position: absolute;
+//        .size(5px,5px);
+//        margin-right: 5px;
+//        content: url("flatui/images/downArrow.png");
+//    }
+//    input[type="number"] {
+
+//    }
+    input[type=number] {
         border: 2px solid @color;
         color: @color;
-        width: 80px;
-        height: 35px;
+        font-size: 24px;
+        padding-left: 5px;
+        background: lighten(@color, 20%);
+        width: 75px;
+        height: 30px; 
+    }   
+    
+    input[type=number]::-webkit-inner-spin-button { 
+        -webkit-appearance: none;
+        background: red;
+        margin: 0;
+        cursor:pointer;
+        display:block;
+        width:15px;
+        text-align:center;
+        position:relative;
     }
-    input:before {
-        content: url("");
+
+    input[type=number]::-webkit-inner-spin-button:before {
+        content: url("flatui/images/upArrow.png");
+        position:absolute;
+        right: 0;
     }
-    input:after {
-        content: url("");
+    input[type=number]::-webkit-inner-spin-button:after {
+        content: url("flatui/images/downArrow.png");
+        position:absolute;
+        right: 0;
+    }
+
+    input[type=number]::-webkit-inner-spin-button:before {
+        top:0;
+    }
+
+    input[type=number]::-webkit-inner-spin-button:after {
+        bottom:0;
     }
 }
 
