--- a/flatui/column.less
+++ b/flatui/column.less
@@ -19,153 +19,146 @@
     .container                                  { position: relative; width: @body-width; margin: 0 auto; padding: 0; }
     .container .column,
     .container .columns                         { float: left; display: inline; margin-left: @margin-width; margin-right: @margin-width; }
-    .row                                        { margin-bottom: 20px; }
+    .row                                        { margin: 1em 0; }
 
     /* Nested Column Classes */
     .column.alpha, .columns.alpha               { margin-left: 0; }
     .column.omega, .columns.omega               { margin-right: 0; }
 
+    /*****************************
+    12 Column ((960/12) - 20) = 60
+    *****************************/
+
     /* Base Grid */
-    .container .one.column                      { width: 40px;  }
-    .container .two.columns                     { width: 100px; }
-    .container .three.columns                   { width: 160px; }
-    .container .four.columns                    { width: 220px; }
-    .container .five.columns                    { width: 280px; }
-    .container .six.columns                     { width: 340px; }
-    .container .seven.columns                   { width: 400px; }
-    .container .eight.columns                   { width: 460px; }
-    .container .nine.columns                    { width: 520px; }
-    .container .ten.columns                     { width: 580px; }
-    .container .eleven.columns                  { width: 640px; }
-    .container .twelve.columns                  { width: 700px; }
-    .container .thirteen.columns                { width: 760px; }
-    .container .fourteen.columns                { width: 820px; }
-    .container .fifteen.columns                 { width: 880px; }
-    .container .sixteen.columns                 { width: 940px; }
+    .container .one.column      { width: 60px; }
+    .container .two.columns 	{ width: 140px; }
+    .container .three.columns 	{ width: 220px; }
+    .container .four.columns 	{ width: 300px; }
+    .container .five.columns 	{ width: 380px; }
+    .container .six.columns 	{ width: 460px; }
+    .container .seven.columns 	{ width: 540px; }	
+    .container .eight.columns 	{ width: 620px; }
+    .container .nine.columns 	{ width: 700px; }
+    .container .ten.columns 	{ width: 780px; }	
+    .container .eleven.columns 	{ width: 860px; }	
+    .container .twelve.columns 	{ width: 940px; }
 
-    .container .one-third.column                { width: 300px; }
-    .container .two-thirds.column               { width: 620px; }
+    .container .one-half.column          	    { width: 460px; } /* ((960/2) - 20) = 460 */
+    .container .one-third.column                { width: 300px; } /* ((960/3) - 20) = 300 */
+    .container .two-thirds.column               { width: 620px; } /* (((960/3) *2) - 20) = 620 */
+    .container .one-quarter.column              { width: 220px; } /* ((960/4) - 20) = 220 */
+    .container .three-quarters.column           { width: 700px; } /* (((960/4) *3) - 20) = 700 */
 
-    /* Offsets */
-    .container .offset-by-one                   { padding-left: 60px;  }
-    .container .offset-by-two                   { padding-left: 120px; }
-    .container .offset-by-three                 { padding-left: 180px; }
-    .container .offset-by-four                  { padding-left: 240px; }
-    .container .offset-by-five                  { padding-left: 300px; }
-    .container .offset-by-six                   { padding-left: 360px; }
-    .container .offset-by-seven                 { padding-left: 420px; }
-    .container .offset-by-eight                 { padding-left: 480px; }
-    .container .offset-by-nine                  { padding-left: 540px; }
-    .container .offset-by-ten                   { padding-left: 600px; }
-    .container .offset-by-eleven                { padding-left: 660px; }
-    .container .offset-by-twelve                { padding-left: 720px; }
-    .container .offset-by-thirteen              { padding-left: 780px; }
-    .container .offset-by-fourteen              { padding-left: 840px; }
-    .container .offset-by-fifteen               { padding-left: 900px; }
-
+    /* Offsets */	
+    .container .offset-by-one 		{ margin-left: 80px; }
+    .container .offset-by-two 		{ margin-left: 160px; }
+    .container .offset-by-three		{ margin-left: 240px; }
+    .container .offset-by-four 		{ margin-left: 320px; }
+    .container .offset-by-five 		{ margin-left: 400px; }
+    .container .offset-by-six 		{ margin-left: 480px; }
+    .container .offset-by-seven		{ margin-left: 560px; }
+    .container .offset-by-eight		{ margin-left: 640px; }
+    .container .offset-by-nine		{ margin-left: 720px; }
+    .container .offset-by-ten 		{ margin-left: 800px; }
+    .container .offset-by-eleven	{ margin-left: 880px; }
 
 
 /* #Tablet (Portrait)
 ================================================== */
 
-    /* Note: Design for a width of 768px */
+/* Note: Design for a width of 768px */
 
-    @media only screen and (min-width: 768px) and (max-width: 959px) {
-        .container                                  { width: 768px; }
-        .container .column,
-        .container .columns                         { margin-left: 10px; margin-right: 10px;  }
-        .column.alpha, .columns.alpha               { margin-left: 0; margin-right: 10px; }
-        .column.omega, .columns.omega               { margin-right: 0; margin-left: 10px; }
-        .alpha.omega                                { margin-left: 0; margin-right: 0; }
+/*****************************
+12 Column
+((768/12) - 20) = 44
+*****************************/
 
-        .container .one.column,
-        .container .one.columns                     { width: 28px; }
-        .container .two.columns                     { width: 76px; }
-        .container .three.columns                   { width: 124px; }
-        .container .four.columns                    { width: 172px; }
-        .container .five.columns                    { width: 220px; }
-        .container .six.columns                     { width: 268px; }
-        .container .seven.columns                   { width: 316px; }
-        .container .eight.columns                   { width: 364px; }
-        .container .nine.columns                    { width: 412px; }
-        .container .ten.columns                     { width: 460px; }
-        .container .eleven.columns                  { width: 508px; }
-        .container .twelve.columns                  { width: 556px; }
-        .container .thirteen.columns                { width: 604px; }
-        .container .fourteen.columns                { width: 652px; }
-        .container .fifteen.columns                 { width: 700px; }
-        .container .sixteen.columns                 { width: 748px; }
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+	.container                                  { width: 768px; }
+	.container .column,
+	.container .columns                         { margin-left: 10px; margin-right: 10px;  }
+	.column.alpha, .columns.alpha               { margin-left: 0; margin-right: 10px; }
+	.column.omega, .columns.omega               { margin-right: 0; margin-left: 10px; }
+	.alpha.omega                                { margin-left: 0; margin-right: 0; }
 
-        .container .one-third.column                { width: 236px; }
-        .container .two-thirds.column               { width: 492px; }
+	.container .one.column                      { width: 44px;  }
+	.container .two.columns 					{ width: 108px; }
+	.container .three.columns 					{ width: 172px; }
+	.container .four.columns 					{ width: 236px; }
+	.container .five.columns 					{ width: 300px; }
+	.container .six.columns 					{ width: 364px; }
+	.container .seven.columns 					{ width: 428px; }	
+	.container .eight.columns 					{ width: 492px; }
+	.container .nine.columns 					{ width: 556px; }
+	.container .ten.columns 					{ width: 620px; }	
+	.container .eleven.columns 					{ width: 684px; }	
+	.container .twelve.columns 					{ width: 748px; }
+	
+	.container .one-half.column          	    { width: 364px; } /* ((768/2) - 20) = 364 */
+	.container .one-third.column                { width: 236px; } /* ((768/3) - 20) = 236 */
+	.container .two-thirds.column               { width: 492px; } /* (((768/3) *2) - 20) = 492 */
+	.container .one-quarter.column              { width: 172px; } /* ((768/4) - 20) = 172 */
+	.container .three-quarters.column           { width: 556px; } /* (((768/4) *3) - 20) = 556 */
+    
+	/* Offsets */	
+	.container .offset-by-one 					{ margin-left: 64px; }
+	.container .offset-by-two 					{ margin-left: 128px; }
+	.container .offset-by-three 				{ margin-left: 192px; }
+	.container .offset-by-four 					{ margin-left: 256px; }
+	.container .offset-by-five 					{ margin-left: 320px; }
+	.container .offset-by-six 					{ margin-left: 384px; }
+	.container .offset-by-seven 				{ margin-left: 448px; }
+	.container .offset-by-eight 				{ margin-left: 512px; }
+	.container .offset-by-nine 					{ margin-left: 576px; }
+	.container .offset-by-ten 					{ margin-left: 640px; }
+	.container .offset-by-eleven 				{ margin-left: 704px; }
 
-        /* Offsets */
-        .container .offset-by-one                   { padding-left: 48px; }
-        .container .offset-by-two                   { padding-left: 96px; }
-        .container .offset-by-three                 { padding-left: 144px; }
-        .container .offset-by-four                  { padding-left: 192px; }
-        .container .offset-by-five                  { padding-left: 240px; }
-        .container .offset-by-six                   { padding-left: 288px; }
-        .container .offset-by-seven                 { padding-left: 336px; }
-        .container .offset-by-eight                 { padding-left: 384px; }
-        .container .offset-by-nine                  { padding-left: 432px; }
-        .container .offset-by-ten                   { padding-left: 480px; }
-        .container .offset-by-eleven                { padding-left: 528px; }
-        .container .offset-by-twelve                { padding-left: 576px; }
-        .container .offset-by-thirteen              { padding-left: 624px; }
-        .container .offset-by-fourteen              { padding-left: 672px; }
-        .container .offset-by-fifteen               { padding-left: 720px; }
-    }
-
+}
 
 /*  #Mobile (Portrait)
 ================================================== */
 
-    /* Note: Design for a width of 320px */
+/* Note: Design for a width of 320px */
 
-    @media only screen and (max-width: 767px) {
-        .container { width: 300px; }
-        .container .columns,
-        .container .column { margin: 0; }
+@media only screen and (max-width: 767px) {
+	.container { width: 100%; }
+	.container .columns,
+	.container .column { margin: 0; }
 
-        .container .one.column,
-        .container .one.columns,
-        .container .two.columns,
-        .container .three.columns,
-        .container .four.columns,
-        .container .five.columns,
-        .container .six.columns,
-        .container .seven.columns,
-        .container .eight.columns,
-        .container .nine.columns,
-        .container .ten.columns,
-        .container .eleven.columns,
-        .container .twelve.columns,
-        .container .thirteen.columns,
-        .container .fourteen.columns,
-        .container .fifteen.columns,
-        .container .sixteen.columns,
-        .container .one-third.column,
-        .container .two-thirds.column  { width: 300px; }
+	.container .one.column,
+	.container .one.columns,
+	.container .two.columns,
+	.container .three.columns,
+	.container .four.columns,
+	.container .five.columns,
+	.container .six.columns,
+	.container .seven.columns,
+	.container .eight.columns,
+	.container .nine.columns,
+	.container .ten.columns,
+	.container .eleven.columns,
+	.container .twelve.columns,
+	.container .one-half.column,
+	.container .one-third.column,
+	.container .two-thirds.column,
+	.container .one-quarter.column,
+	.container .three-quarters.column  { width: 100%; }
 
-        /* Offsets */
-        .container .offset-by-one,
-        .container .offset-by-two,
-        .container .offset-by-three,
-        .container .offset-by-four,
-        .container .offset-by-five,
-        .container .offset-by-six,
-        .container .offset-by-seven,
-        .container .offset-by-eight,
-        .container .offset-by-nine,
-        .container .offset-by-ten,
-        .container .offset-by-eleven,
-        .container .offset-by-twelve,
-        .container .offset-by-thirteen,
-        .container .offset-by-fourteen,
-        .container .offset-by-fifteen { padding-left: 0; }
+	/* Offsets */
+	.container .offset-by-one,
+	.container .offset-by-two,
+	.container .offset-by-three,
+	.container .offset-by-four,
+	.container .offset-by-five,
+	.container .offset-by-six,
+	.container .offset-by-seven,
+	.container .offset-by-eight,
+	.container .offset-by-nine,
+	.container .offset-by-ten,
+	.container .offset-by-eleven   { padding-left: 0; }
 
-    }
+}
+
 
 
 /* #Mobile (Landscape)
@@ -191,36 +184,34 @@
         .container .ten.columns,
         .container .eleven.columns,
         .container .twelve.columns,
-        .container .thirteen.columns,
-        .container .fourteen.columns,
-        .container .fifteen.columns,
-        .container .sixteen.columns,
+        .container .one-half.column,
         .container .one-third.column,
-        .container .two-thirds.column { width: 420px; }
+        .container .two-thirds.column,
+        .container .one-quarter.column,
+        .container .three-quarters.column  { width: 100%; }
+
     }
 
 /* #Tablet (Portrait)
 ================================================== */
 
     /* Note: Design for a width of 768px */
-    @media only screen and (min-width: 768px) and (max-width: 959px) {}
+    @media only screen and (min-width: 768px) and (max-width: 959px) {
     
-
+    }
+    
 /* #Mobile (Portrait)
 ================================================== */
 
     /* Note: Design for a width of 320px */
     @media only screen and (max-width: 767px) {
-        input[type="text"] {
-            margin: 5px 0 !important;
-        }
-        #radcheck_divider {
-            margin: 5px 0;
-        }
+        
     }
 
 /* #Mobile (Landscape)
 ================================================== */
 
     /* Note: Design for a width of 480px */
-    @media only screen and (min-width: 480px) and (max-width: 767px) {}
+    @media only screen and (min-width: 480px) and (max-width: 767px) {
+    
+    }
