added in some more useful css snippets and removed old code

--- a/flatui/column.css
+++ b/flatui/column.css
@@ -130,6 +130,18 @@
 .container .offset-by-eleven {
   margin-left: 880px;
 }
+/* #Extras
+================================================== */
+.disabled {
+  pointer-events: none;
+  opacity: 0.5;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
 /* #Tablet (Portrait)
 ================================================== */
 /* Note: Design for a width of 768px */
