--- a/flatui/column.less
+++ b/flatui/column.less
@@ -7,7 +7,6 @@
     #Mobile (Landscape) 
 ================================================== */
 
-
 /* #Base Variables
 ================================================== */
 @body-width: 960px;
@@ -62,6 +61,20 @@
     .container .offset-by-ten 		{ margin-left: 800px; }
     .container .offset-by-eleven	{ margin-left: 880px; }
 
+/* #Extras
+================================================== */
+.disabled {
+    pointer-events: none;
+    opacity: 0.5;
+}
+
+.left {
+    float: left;
+}
+
+.right {
+    float: right;
+}
 
 /* #Tablet (Portrait)
 ================================================== */
