--- a/flatui/mixin.less
+++ b/flatui/mixin.less
@@ -52,6 +52,10 @@
     box-shadow:         @x @y @blur rgba(0, 0, 0, @color);
 }
 
+.reflect (@length: 50%, @opacity: 0.2){
+    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(@length, transparent), to(rgba(255,255,255,@opacity)));
+}
+
 /* #Box Sizing
 ================================================== */
 .box-sizing (@prop) {
@@ -135,11 +139,11 @@
     -webkit-appearance: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    .transition(border, .25s, linear);
+    .transition(all, .5s, linear);
     .box-sizing(border-box);
     &:focus {
         border: 2px solid lighten(@color, 20%);
-        color: @color;
+        color: darken(@color, 10%);
     }
 }
 
