--- a/flatui/reset.less
+++ b/flatui/reset.less
@@ -1,3 +1,9 @@
+* {
+	-webkit-box-sizing: border-box;
+	   -moz-box-sizing: border-box;
+	        box-sizing: border-box;
+}
+
 html, body {
 	border: 0;
 	font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
