--- a/styles.less
+++ b/styles.less
@@ -1,103 +1,35 @@
-/*Imports*/
+/* #Imports
+================================================== */
 @import "flatui/reset.less";
 @import "flatui/column.less";
 @import "flatui/color.less";
 @import "flatui/mixin.less";
-//_______________________________________
 
-/*Fonts*/
+
+/* #Import a font
+================================================== */
 .font-face("Mohave", "fonts/Mohave.otf");
-//_______________________________________
 
 
-/*Regular Code*/
+
+/* #Regular Code
+================================================== */
 h1 {
-    font-size: 36px;
-    clear: both;
-    font-family: "Mohave";
+    font: 36px "Mohave";
 }
 
-h2 {
-    font-size: 24px;
+div.column, div.columns {
+    background-color: @alizarin;
+    height: 40px;
 }
 
-hr {
-    background-color: @silver;
-    height: 2px;
-    margin: 10px 0;
+div h2 {
+    color: white;
+    padding-top: 10px;
+    text-align: center;
 }
 
-div#colorBlocks * {
-    .size(100%/20; 100px);
-    float: left;
-    .reflect(40%, 0.6);
-    &#alizarin      {background-color: @alizarin;       }
-    &#pomegranate   {background-color: @pomegranate;    }
-    &#carrot        {background-color: @carrot;         }
-    &#pumpkin       {background-color: @pumpkin;        }
-    &#sunflower     {background-color: @sunflower;      }
-    &#darksunflower {background-color: @darksunflower;  }
-    &#turquoise     {background-color: @turquoise;      }
-    &#greensea      {background-color: @greensea;       }
-    &#emerald       {background-color: @emerald;        }
-    &#nephritis     {background-color: @nephritis;      }
-    &#peterriver    {background-color: @peterriver;     }
-    &#belizehole    {background-color: @belizehole;     }
-    &#amethyst      {background-color: @amethyst;       }
-    &#wisteria      {background-color: @wisteria;       }
-    &#wetasphault   {background-color: @wetasphault;    }
-    &#midnightblue  {background-color: @midnightblue;   }
-    &#concrete      {background-color: @concrete;       }
-    &#asbestos      {background-color: @asbestos;       }
-    &#clouds        {background-color: @clouds;         }
-    &#silver        {background-color: @silver;         }
-}
 
-div#buttonExamples {
-    button {
-        clear: both;
-        float: left;
-    }
-    
-    //Regular Buttons
-    button.tiny_reg         {.tiny_button();                }
-    button.small_reg        {.small_button();               }
-    button.medium_reg       {.medium_button();              }
-    button.large_reg        {.large_button();               }
-    
-    //Error Buttons
-    button.tiny_err         {.tiny_button(@pomegranate);    }
-    button.small_err        {.small_button(@pomegranate);   }
-    button.medium_err       {.medium_button(@pomegranate);  }
-    button.large_err        {.large_button(@pomegranate);   }
-
-    //Attention Buttons
-    button.tiny_att         {.tiny_button(@sunflower);      }
-    button.small_att        {.small_button(@sunflower);     }
-    button.medium_att       {.medium_button(@sunflower);    }
-    button.large_att        {.large_button(@sunflower);     }
-}
-
-div#inputExamples {
-    input.regular           {.text_input(@concrete);        }
-    input.error             {.text_input(@alizarin);        }
-    input.success           {.text_input(@emerald);         }
-}
-
-div#radcheckExamples {
-    div.radio_button_blue   {.radio_button();               }
-    div.radio_button_red    {.radio_button(@alizarin);      }
-    div.radio_button_green  {.radio_button(@emerald);       }
-    
-    div.checkbox_blue       {.checkbox();                   }
-    div.checkbox_red        {.checkbox(@alizarin);          }
-    div.checkbox_green      {.checkbox(@emerald);           }
-    div.checkbox_yellow     {.checkbox(@sunflower);         }
-    div.checkbox_orange     {.checkbox(@carrot);            }
-    div.checkbox_purple     {.checkbox(@amethyst);          }
-}
-
-//----------------------------------------------------------
 
 
 
