--- a/flatui/column.less
+++ b/flatui/column.less
@@ -2,9 +2,12 @@
 ==================================================
     #Base Variables
     #Base 960 Grid
+    #Extras
     #Tablet (Portrait)
     #Mobile (Portrait)
     #Mobile (Landscape) 
+    #Custom Media Queries
+    
 ================================================== */
 
 /* #Base Variables
@@ -18,7 +21,7 @@
     .container                                  { position: relative; width: @body-width; margin: 0 auto; padding: 0; }
     .container .column,
     .container .columns                         { float: left; display: inline; margin-left: @margin-width; margin-right: @margin-width; }
-    .row                                        { margin: 1em 0; }
+    .row                                        { margin: 1em 0;}
 
     /* Nested Column Classes */
     .column.alpha, .columns.alpha               { margin-left: 0; }
@@ -76,15 +79,57 @@
     float: right;
 }
 
+/* #Clearing
+================================================== */
+
+/* Self Clearing Goodness */
+.container:after {
+    content: "\0020"; 
+    display: block; 
+    height: 0; 
+    clear: both; 
+    visibility: hidden; 
+}
+
+/* Use clearfix class on parent to clear nested columns,
+or wrap each row of columns in a <div class="row"> */
+.clearfix:before,
+.clearfix:after,
+.row:before,
+.row:after {
+    content: '\0020';
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0; }
+.row:after,
+.clearfix:after {
+    clear: both; }
+.row,
+.clearfix {
+    zoom: 1; 
+}
+
+/* You can also use a <br class="clear" /> to clear columns */
+.clear {
+    clear: both;
+    display: block;
+    overflow: hidden;
+    visibility: hidden;
+    width: 0;
+    height: 0;
+}
+
 /* #Tablet (Portrait)
 ================================================== */
 
-/* Note: Design for a width of 768px */
-
-/*****************************
+/* Note: Design for a width of 768px 
+******************************
 12 Column
 ((768/12) - 20) = 44
 *****************************/
+
 
 @media only screen and (min-width: 768px) and (max-width: 959px) {
 	.container                                  { width: 768px; }
