Re-doing the index page for the starter kit
minor fixes in column less and mixinless with heights, hr styles, and a
centered style. Adding in all features of framework in the new index
page and laying it all out

--- a/flatui/column.less
+++ b/flatui/column.less
@@ -3,6 +3,7 @@
     #Base Variables
     #Base 960 Grid
     #Extras
+    #Clearing
     #Tablet (Portrait)
     #Mobile (Portrait)
     #Mobile (Landscape) 
@@ -66,6 +67,12 @@
 
 /* #Extras
 ================================================== */
+hr {
+    height: 2px; 
+    margin: 2px 0;
+    background-color: gray;
+}
+
 .disabled {
     pointer-events: none;
     opacity: 0.5;
@@ -77,6 +84,10 @@
 
 .right {
     float: right;
+}
+
+.centered {
+    text-align: center;
 }
 
 /* #Clearing
