Working on index page and minor styling improvements
- Updated to new version of Less.js (1.7.0)
- Formatted color.less and added template for making colors
- Formatted column.less and added a few width styles
- Separated all form styles into new form.less
- Removed all form styles from mixin.less
- Improved index.html with new visuals/effects
- Added animations for body on load and the grid system
- Added some styles for index.html and separated form code

--- a/flatui/column.less
+++ b/flatui/column.less
@@ -20,8 +20,10 @@
 ================================================== */
 
     .container                                  { position: relative; width: @body-width; margin: 0 auto; padding: 0; }
+
     .container .column,
     .container .columns                         { float: left; display: inline; margin-left: @margin-width; margin-right: @margin-width; }
+
     .row                                        { margin: 1em 0;}
 
     /* Nested Column Classes */
@@ -69,7 +71,7 @@
 ================================================== */
 hr {
     height: 2px; 
-    margin: 2px 0;
+    margin: 5px 0;
     background-color: gray;
 }
 
@@ -88,6 +90,14 @@ hr {
 
 .centered {
     text-align: center;
+} 
+
+.full {
+    width: 100%;   
+}
+
+.half {
+    width: 50%;   
 }
 
 /* #Clearing
