--- a/flatui/column.css
+++ b/flatui/column.css
@@ -138,7 +138,7 @@
 ================================================== */
 hr {
   height: 2px;
-  margin: 2px 0;
+  margin: 5px 0;
   background-color: gray;
 }
 .disabled {
@@ -153,6 +153,12 @@ hr {
 }
 .centered {
   text-align: center;
+}
+.full {
+  width: 100%;
+}
+.half {
+  width: 50%;
 }
 /* #Clearing
 ================================================== */
