--- a/flatui/form.less
+++ b/flatui/form.less
@@ -27,7 +27,7 @@
     label {
         float: left;
         text-align: right;
-        width: 90px;
+        min-width: 90px;
         margin: 3px 7px 3px 0;
     }
     input {
