--- a/flatui/column.less
+++ b/flatui/column.less
@@ -27,7 +27,7 @@
     .row                                        { margin: 1em 0;}
 
     /* Nested Column Classes */
-    .column.alpha, .columns.alpha               { margin-left: 0; }
+    .column.alpha, .columns.alpha               { margin-left:  0; }
     .column.omega, .columns.omega               { margin-right: 0; }
 
     /*****************************
@@ -48,11 +48,11 @@
     .container .eleven.columns 	{ width: 860px; }	
     .container .twelve.columns 	{ width: 940px; }
 
-    .container .one-half.column          	    { width: 460px; } /* ((960/2) - 20) = 460 */
-    .container .one-third.column                { width: 300px; } /* ((960/3) - 20) = 300 */
-    .container .two-thirds.column               { width: 620px; } /* (((960/3) *2) - 20) = 620 */
-    .container .one-quarter.column              { width: 220px; } /* ((960/4) - 20) = 220 */
-    .container .three-quarters.column           { width: 700px; } /* (((960/4) *3) - 20) = 700 */
+    .container .one-half.column         { width: 460px; } /* ((960/2) - 20) = 460 */
+    .container .one-third.column        { width: 300px; } /* ((960/3) - 20) = 300 */
+    .container .two-thirds.column       { width: 620px; } /* (((960/3) *2) - 20) = 620 */
+    .container .one-quarter.column      { width: 220px; } /* ((960/4) - 20) = 220 */
+    .container .three-quarters.column   { width: 700px; } /* (((960/4) *3) - 20) = 700 */
 
     /* Offsets */	
     .container .offset-by-one 		{ margin-left: 80px; }
@@ -71,8 +71,9 @@
 ================================================== */
 hr {
     height: 2px; 
-    margin: 5px 0;
-    background-color: gray;
+    width: 100%;
+    margin: 0 10px;
+    background-color: @silver;
 }
 
 .disabled {
@@ -284,7 +285,14 @@ or wrap each row of columns in a <div class="row"> */
 
     /* Note: Design for a width of 320px */
     @media only screen and (max-width: 767px) {
+        hr {
+            margin: 0 auto;
+            width: 100%;
+        }
         
+        .hide_for_mobile {
+            display: none;
+        }
     }
 
 /* #Mobile (Landscape)
@@ -292,5 +300,5 @@ or wrap each row of columns in a <div class="row"> */
 
     /* Note: Design for a width of 480px */
     @media only screen and (min-width: 480px) and (max-width: 767px) {
-    
+        
     }
