--- a/styles.less
+++ b/styles.less
@@ -13,7 +13,13 @@
 
 /* #Regular Code
 ================================================== */
-body {opacity: 0;} 
+body {
+    opacity: 0;
+    h1 {
+        font: 36px "Corbel";
+        margin-top: 5px;
+    }   
+} 
 
 div#title {
     margin-bottom: 10px;
@@ -30,17 +36,9 @@ div#title {
     }
 }
 
-h1 {
-    font: 36px "Corbel";
-    margin-top: 5px;
-}
-
-
-
 #grid_system  {
     div.column, div.columns {
         position: relative;
-        background-color: @pomegranate;
         height: 40px;
     }
     h2,h3 {
@@ -77,26 +75,6 @@ h1 {
             }
         }
     }
-    #alizarin        { background-color: @alizarin;}
-    #pomegranate     { background-color: @pomegranate;}     
-    #carrot          { background-color: @carrot;}      
-    #pumpkin         { background-color: @pumpkin;}     
-    #sunflower       { background-color: @sunflower;}       
-    #darksunflower   { background-color: @darksunflower;}      
-    #turquoise       { background-color: @turquoise;}        
-    #greensea        { background-color: @greensea;}
-    #emerald         { background-color: @emerald;}
-    #nephritis       { background-color: @nephritis;}
-    #peterriver      { background-color: @peterriver;}
-    #belizehole      { background-color: @belizehole;}
-    #amethyst        { background-color: @amethyst;}
-    #wisteria        { background-color: @wisteria;}
-    #clouds          { background-color: @clouds;}
-    #silver          { background-color: @silver;}
-    #concrete        { background-color: @concrete;}
-    #asbestos        { background-color: @asbestos;}
-    #wetasphault     { background-color: @wetasphault;}
-    #midnightblue    { background-color: @midnightblue;}
 }
 
 
