--- a/flatui/color.less
+++ b/flatui/color.less
@@ -44,3 +44,28 @@
 
 //Or load your own colors!
 //@cool-color:  #BADA55;
+
+
+
+//--------------------------
+//Color Shortcuts
+#alizarin        { background-color: @alizarin;}
+#pomegranate     { background-color: @pomegranate;}     
+#carrot          { background-color: @carrot;}      
+#pumpkin         { background-color: @pumpkin;}     
+#sunflower       { background-color: @sunflower;}       
+#darksunflower   { background-color: @darksunflower;}      
+#turquoise       { background-color: @turquoise;}        
+#greensea        { background-color: @greensea;}
+#emerald         { background-color: @emerald;}
+#nephritis       { background-color: @nephritis;}
+#peterriver      { background-color: @peterriver;}
+#belizehole      { background-color: @belizehole;}
+#amethyst        { background-color: @amethyst;}
+#wisteria        { background-color: @wisteria;}
+#clouds          { background-color: @clouds;}
+#silver          { background-color: @silver;}
+#concrete        { background-color: @concrete;}
+#asbestos        { background-color: @asbestos;}
+#wetasphault     { background-color: @wetasphault;}
+#midnightblue    { background-color: @midnightblue;}
