--- a/flatui/form.less
+++ b/flatui/form.less
@@ -7,10 +7,10 @@
     border: 1px solid lighten(@color, 15%);
     .border-radius(4px);
     color: lighten(@color, 10%);
-    font: 15px "Myriad Pro";
+    font: 16px "Myriad Pro";
     line-height: 1.867;
-    padding: 14px 12px;
-    height: 33px;
+    padding: 5px 12px 0;
+    height: 32px;
     -webkit-appearance: none;
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -35,9 +35,10 @@
         -webkit-appearance: none;
         cursor: pointer;
         float: left;
+        padding: 1px;
         .size(22px, 22px);
         .border-radius(15px);
-        border: 3px solid @color;
+        border: 2px solid @color;
         background-color: lighten(@color, 10%);
         &:before {
             content: url("flatui/images/radio.png");   
@@ -58,9 +59,10 @@
 /* #Checkbox
 ================================================== */
 .checkbox(@color: @peterriver) {
-    cursor: pointer;
     label {
         float: left;
+        text-align: right;
+        min-width: 90px;
         margin: 3px 7px 3px 0;
     }
     input {
