--- a/styles.css
+++ b/styles.css
@@ -520,6 +520,66 @@ or wrap each row of columns in a <div class="row"> */
 ================================================== */
 /* Note: Design for a width of 480px */
 /*Flat Colors*/
+#alizarin {
+  background-color: #e74c3c;
+}
+#pomegranate {
+  background-color: #c0392b;
+}
+#carrot {
+  background-color: #e67e22;
+}
+#pumpkin {
+  background-color: #d35400;
+}
+#sunflower {
+  background-color: #f1c40f;
+}
+#darksunflower {
+  background-color: #f39c12;
+}
+#turquoise {
+  background-color: #1abc9c;
+}
+#greensea {
+  background-color: #16a085;
+}
+#emerald {
+  background-color: #2ecc71;
+}
+#nephritis {
+  background-color: #27ae60;
+}
+#peterriver {
+  background-color: #3498db;
+}
+#belizehole {
+  background-color: #2980b9;
+}
+#amethyst {
+  background-color: #9b59b6;
+}
+#wisteria {
+  background-color: #8e44ad;
+}
+#clouds {
+  background-color: #ecf0f1;
+}
+#silver {
+  background-color: #bdc3c7;
+}
+#concrete {
+  background-color: #95a5a6;
+}
+#asbestos {
+  background-color: #7f8c8d;
+}
+#wetasphault {
+  background-color: #34495e;
+}
+#midnightblue {
+  background-color: #2c3e50;
+}
 /* #Basic Size
 ================================================== */
 /* #Gradients
@@ -553,10 +613,10 @@ input.regular {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   color: #9aa4a5;
-  font: 15px "Myriad Pro";
+  font: 16px "Myriad Pro";
   line-height: 1.867;
-  padding: 14px 12px;
-  height: 33px;
+  padding: 5px 12px 0;
+  height: 32px;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -579,10 +639,10 @@ input.error {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   color: #ed7669;
-  font: 15px "Myriad Pro";
+  font: 16px "Myriad Pro";
   line-height: 1.867;
-  padding: 14px 12px;
-  height: 33px;
+  padding: 5px 12px 0;
+  height: 32px;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -605,10 +665,10 @@ input.success {
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   color: #54d98c;
-  font: 15px "Myriad Pro";
+  font: 16px "Myriad Pro";
   line-height: 1.867;
-  padding: 14px 12px;
-  height: 33px;
+  padding: 5px 12px 0;
+  height: 32px;
   -webkit-appearance: none;
   -webkit-box-shadow: none;
   box-shadow: none;
@@ -942,6 +1002,7 @@ div.radio_button_blue input {
   -webkit-appearance: none;
   cursor: pointer;
   float: left;
+  padding: 1px;
   width: 22px;
   height: 22px;
   -webkit-border-radius: 15px;
@@ -950,7 +1011,7 @@ div.radio_button_blue input {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  border: 3px solid #3498db;
+  border: 2px solid #3498db;
   background-color: #5faee3;
 }
 div.radio_button_blue input:before {
@@ -978,6 +1039,7 @@ div.radio_button_red input {
   -webkit-appearance: none;
   cursor: pointer;
   float: left;
+  padding: 1px;
   width: 22px;
   height: 22px;
   -webkit-border-radius: 15px;
@@ -986,7 +1048,7 @@ div.radio_button_red input {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  border: 3px solid #e74c3c;
+  border: 2px solid #e74c3c;
   background-color: #ed7669;
 }
 div.radio_button_red input:before {
@@ -1014,6 +1076,7 @@ div.radio_button_green input {
   -webkit-appearance: none;
   cursor: pointer;
   float: left;
+  padding: 1px;
   width: 22px;
   height: 22px;
   -webkit-border-radius: 15px;
@@ -1022,7 +1085,7 @@ div.radio_button_green input {
   -moz-background-clip: padding;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
-  border: 3px solid #2ecc71;
+  border: 2px solid #2ecc71;
   background-color: #54d98c;
 }
 div.radio_button_green input:before {
@@ -1039,11 +1102,10 @@ div.radio_button_green input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_blue {
-  cursor: pointer;
-}
 div.checkbox_blue label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_blue input {
@@ -1077,11 +1139,10 @@ div.checkbox_blue input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_red {
-  cursor: pointer;
-}
 div.checkbox_red label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_red input {
@@ -1115,11 +1176,10 @@ div.checkbox_red input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_green {
-  cursor: pointer;
-}
 div.checkbox_green label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_green input {
@@ -1153,11 +1213,10 @@ div.checkbox_green input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_yellow {
-  cursor: pointer;
-}
 div.checkbox_yellow label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_yellow input {
@@ -1191,11 +1250,10 @@ div.checkbox_yellow input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_orange {
-  cursor: pointer;
-}
 div.checkbox_orange label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_orange input {
@@ -1229,11 +1287,10 @@ div.checkbox_orange input:checked:before {
   visibility: visible;
   opacity: 1;
 }
-div.checkbox_purple {
-  cursor: pointer;
-}
 div.checkbox_purple label {
   float: left;
+  text-align: right;
+  min-width: 90px;
   margin: 3px 7px 3px 0;
 }
 div.checkbox_purple input {
@@ -1274,6 +1331,10 @@ div.checkbox_purple input:checked:before {
 body {
   opacity: 0;
 }
+body h1 {
+  font: 36px "Corbel";
+  margin-top: 5px;
+}
 div#title {
   margin-bottom: 10px;
 }
@@ -1288,14 +1349,9 @@ div#title p {
   font-size: 24px;
   text-align: center;
 }
-h1 {
-  font: 36px "Corbel";
-  margin-top: 5px;
-}
 #grid_system div.column,
 #grid_system div.columns {
   position: relative;
-  background-color: #c0392b;
   height: 40px;
 }
 #grid_system h2,
@@ -1321,64 +1377,4 @@ h1 {
 }
 #colors div div div {
   height: 35px;
-}
-#colors #alizarin {
-  background-color: #e74c3c;
-}
-#colors #pomegranate {
-  background-color: #c0392b;
-}
-#colors #carrot {
-  background-color: #e67e22;
-}
-#colors #pumpkin {
-  background-color: #d35400;
-}
-#colors #sunflower {
-  background-color: #f1c40f;
-}
-#colors #darksunflower {
-  background-color: #f39c12;
-}
-#colors #turquoise {
-  background-color: #1abc9c;
-}
-#colors #greensea {
-  background-color: #16a085;
-}
-#colors #emerald {
-  background-color: #2ecc71;
-}
-#colors #nephritis {
-  background-color: #27ae60;
-}
-#colors #peterriver {
-  background-color: #3498db;
-}
-#colors #belizehole {
-  background-color: #2980b9;
-}
-#colors #amethyst {
-  background-color: #9b59b6;
-}
-#colors #wisteria {
-  background-color: #8e44ad;
-}
-#colors #clouds {
-  background-color: #ecf0f1;
-}
-#colors #silver {
-  background-color: #bdc3c7;
-}
-#colors #concrete {
-  background-color: #95a5a6;
-}
-#colors #asbestos {
-  background-color: #7f8c8d;
-}
-#colors #wetasphault {
-  background-color: #34495e;
-}
-#colors #midnightblue {
-  background-color: #2c3e50;
 }
