--- a/styles.less
+++ b/styles.less
@@ -1,7 +1,7 @@
 /* #Imports
 ================================================== */
 @import "flatui/reset.less";
-@import "flatui/column.less";
+@import "flatui/grid.less";
 @import "flatui/color.less";
 @import "flatui/mixin.less";
 @import "flatui/form.less";
@@ -68,14 +68,14 @@ div#title {
 }
 
 #colors {
-    div {
+    .color_container {
         div {
-            div {
-                height: 35px;
-            }
+            height: 35px;
         }
     }
 }
+
+
 
 
 
