--- a/flatui/reset.less
+++ b/flatui/reset.less
@@ -12,8 +12,8 @@ html, body {
 	padding: 0;
 }
  
-div, span, img, table, caption, thead, tbody,
-tfoot, tr, td, article, aside, canvas, hgroup,
+div, span, img, table, thead, tbody,
+tfoot, tr, td, article, aside, canvas,
 nav, footer, header, section, audio, video {
   border: 0;
   margin: 0;
@@ -21,7 +21,7 @@ nav, footer, header, section, audio, video {
 }
  
 h1, h2, h3, h4, h5, h6, p, blockquote, a, code,
-em, ins, small, strong, sub, sup, b, i, hr, dl, dt, dd,
+em, ins, sub, sup, hr, dl, dt, dd,
 ol, ul, li, fieldset, legend, label {
   border: 0;
   font-size: 100%;
