--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,6 @@ div,
 span,
 img,
 table,
-caption,
 thead,
 tbody,
 tfoot,
@@ -27,7 +26,6 @@ td,
 article,
 aside,
 canvas,
-hgroup,
 nav,
 footer,
 header,
@@ -50,12 +48,8 @@ a,
 code,
 em,
 ins,
-small,
-strong,
 sub,
 sup,
-b,
-i,
 hr,
 dl,
 dt,
@@ -586,6 +580,34 @@ or wrap each row of columns in a <div class="row"> */
 ================================================== */
 /* #Border Radius
 ================================================== */
+/* #Image Shapes
+================================================== */
+.img-circle {
+  -webkit-border-radius: 100px;
+  -moz-border-radius: 100px;
+  border-radius: 100px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.img-rounded {
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+.img-thumb {
+  padding: 3px;
+  border: 1px solid #bdc3c7;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
 /* #Box Shadow
 ================================================== */
 /* #Box Sizing
@@ -1375,6 +1397,6 @@ div#title p {
 #buttons_forms input[type="text"] {
   margin-bottom: 3px;
 }
-#colors div div div {
+#colors .color_container div {
   height: 35px;
 }
