Added nav bars and formatting
- Added buttons to form.less and formatted a few things
- Removed <hr> formatting and added a few classes
- Moved buttons from mixin.less and subbed in real hex
- Added nav.less for navigation bars
- Re-styled buttons on index and added nav bars
- Added rollover effect for color boxes
- Added nav.less to main stylesheet

--- a/flatui/mixin.less
+++ b/flatui/mixin.less
@@ -1,5 +1,3 @@
-@import "color.less";
-
 /* #Basic Size
 ================================================== */
 .size(@width; @height) {
@@ -57,7 +55,7 @@
 
 .img-thumb {
     padding: 3px;
-    border: 1px solid @silver;
+    border: 1px solid #bdc3c7;
     .border-radius(4px);
 }
 
@@ -100,45 +98,4 @@
          e(%("url('%d.woff') format('woff')", ~"@{url}")),
          e(%("url('%d.ttf') format('truetype')", ~"@{url}"));
   }
-}
-
-/* #Buttons
-================================================== */
-.button(@color: @emerald) {
-    cursor: pointer;
-    border: 0;
-    background-color: @color;
-    color: lighten(@color, 60%);
-    .transition(all, 0.3s);
-    &:hover {
-        background-color: lighten(@color, 10%);
-    }
-}
-.tiny_button(@color: @emerald) {
-    .button(@color);
-    .border-radius(3px);
-    padding: 6px;
-    font-size: 12px;
-    line-height: 1.083;
-}
-.small_button(@color: @emerald) {
-    .button(@color);
-    .border-radius(4px);
-    padding: 9px;
-    font-size: 13px;
-    line-height: 1.385;
-}
-.medium_button(@color: @emerald) {
-    .button(@color);
-    .border-radius(6px);
-    padding: 10px;
-    font-size: 17px;
-    line-height: 1.471;
-}
-.large_button(@color: @emerald) {
-    .button(@color);
-    .border-radius(6px);
-    padding: 13px;
-    font-size: 22px;
-    line-height: 1.227;
 }
