--- a/styles.less
+++ b/styles.less
@@ -5,6 +5,7 @@
 @import "flatui/color.less";
 @import "flatui/mixin.less";
 @import "flatui/form.less";
+@import "flatui/nav.less";
 
 
 /* #Import a font
@@ -71,16 +72,15 @@ div#title {
     .color_container {
         div {
             height: 35px;
+            h2 {
+                text-align: center;
+                line-height: 35px;
+                opacity: 0;
+                cursor: default;
+            }
         }
     }
 }
-
-
-
-
-
-
-
 
 
 
