--- a/flatui/form.less
+++ b/flatui/form.less
@@ -3,7 +3,7 @@
 
 /* #Input Fields
 ================================================== */
-.text_input(@color: @concrete) {
+.text-input(@color: @concrete) {
     border: 1px solid lighten(@color, 15%);
     .border-radius(4px);
     color: lighten(@color, 10%);
@@ -23,7 +23,7 @@
 
 /* #Radio Buttons
 ================================================== */
-.radio_button(@color: @peterriver) {
+.radio-button(@color: @peterriver) {
     label {
         float: left;
         text-align: right;
@@ -56,7 +56,7 @@
 }
 
 
-/* #Checkbox
+/* #Checkboxes
 ================================================== */
 .checkbox(@color: @peterriver) {
     label {
@@ -132,44 +132,52 @@
     }
 }
 
+/* #Buttons
+================================================== */
+.button(@color: @emerald) {
+    cursor: pointer;
+    border: 0;
+    min-width: 90px;
+    background-color: @color;
+    color: lighten(@color, 60%);
+    .transition(all, 0.3s);
+    &:hover {
+        background-color: lighten(@color, 10%);
+    }
+}
+.medium-button(@color: @emerald) {
+    .button(@color);
+    padding: 9px;
+    font-size: 17px;
+    line-height: 1.471;
+}
 
-//On the fly styles for all above styles
+/* #On-The-Fly Styles
+================================================== */
 
 //Text Inputs
-input.regular           {.text_input(@asbestos);     }
-input.error             {.text_input(@alizarin);     }
-input.success           {.text_input(@emerald);      }
+input.regular           {.text-input(@asbestos);     }
+input.error             {.text-input(@alizarin);     }
+input.success           {.text-input(@emerald);      }
 
 //Number Inputs
 div.number_input        {.numInput();                }
 
-//Regular Buttons
-button.tiny_reg         {.tiny_button();             }
-button.small_reg        {.small_button();            }
-button.medium_reg       {.medium_button();           }
-button.large_reg        {.large_button();            }
-
-//Error Buttons
-button.tiny_err         {.tiny_button(@alizarin);    }
-button.small_err        {.small_button(@alizarin);   }
-button.medium_err       {.medium_button(@alizarin);  }
-button.large_err        {.large_button(@alizarin);   }
-
-//Attention Buttons
-button.tiny_att         {.tiny_button(@sunflower);   }
-button.small_att        {.small_button(@sunflower);  }
-button.medium_att       {.medium_button(@sunflower); }
-button.large_att        {.large_button(@sunflower);  }
+//Buttons
+button.success          {.medium-button(@emerald);   }
+button.error            {.medium-button(@alizarin);  }
+button.attention        {.medium-button(@sunflower); }
+button.caution          {.medium-button(@peterriver);}
 
 //Radio Buttons
-div.radio_button_blue   {.radio_button();            }
-div.radio_button_red    {.radio_button(@alizarin);   }
-div.radio_button_green  {.radio_button(@emerald);    }
+div.radio-button-blue   {.radio-button();            }
+div.radio-button-red    {.radio-button(@alizarin);   }
+div.radio-button-green  {.radio-button(@emerald);    }
 
 //Checkboxes
-div.checkbox_blue       {.checkbox();                }
-div.checkbox_red        {.checkbox(@alizarin);       }
-div.checkbox_green      {.checkbox(@emerald);        }
-div.checkbox_yellow     {.checkbox(@sunflower);      }
-div.checkbox_orange     {.checkbox(@carrot);         }
-div.checkbox_purple     {.checkbox(@amethyst);       }
+div.checkbox-blue       {.checkbox();                }
+div.checkbox-red        {.checkbox(@alizarin);       }
+div.checkbox-green      {.checkbox(@emerald);        }
+div.checkbox-yellow     {.checkbox(@sunflower);      }
+div.checkbox-orange     {.checkbox(@carrot);         }
+div.checkbox-purple     {.checkbox(@amethyst);       }
