--- a/flatui/grid.less
+++ b/flatui/grid.less
@@ -1,3 +1,5 @@
+@import "mixin.less";
+
 /* Table of Contents
 ==================================================
     #Base Variables
@@ -71,9 +73,16 @@
 ================================================== */
 hr {
     height: 2px; 
-    width: 100%;
-    margin: 0 10px;
-    background-color: @silver;
+    background-color: #bdc3c7;
+    margin: 3px 0 8px;
+}
+
+.lightened {
+    color: #bdc3c7;
+}
+
+.rounded {
+    .border-radius(8px);
 }
 
 .disabled {
