--- a/styles.css
+++ b/styles.css
@@ -233,9 +233,11 @@ a img {
 ================================================== */
 hr {
   height: 2px;
-  width: 100%;
-  margin: 0 10px;
   background-color: #bdc3c7;
+  margin: 3px 0 8px;
+}
+.lightened {
+  color: #bdc3c7;
 }
 .disabled {
   pointer-events: none;
@@ -1346,6 +1348,80 @@ div.checkbox_purple input:checked:before {
   visibility: visible;
   opacity: 1;
 }
+.navbar-reg {
+  background: #3498db;
+  overflow: hidden;
+  font: 16px "Myriad Pro";
+}
+.navbar-reg ul {
+  overflow: hidden;
+  list-style-type: none;
+}
+.navbar-reg ul li {
+  cursor: pointer;
+  border-left: 1px solid #5faee3;
+  float: left;
+  width: 92px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+.navbar-reg ul li:first-child {
+  border-left: none;
+}
+.navbar-reg ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  text-decoration: none;
+  color: white;
+}
+.navbar-reg ul li a:hover {
+  color: #217dbb;
+  background-color: #4aa3df;
+}
+.navbar-green {
+  background: #2ecc71;
+  overflow: hidden;
+  font: 16px "Myriad Pro";
+}
+.navbar-green ul {
+  overflow: hidden;
+  list-style-type: none;
+}
+.navbar-green ul li {
+  cursor: pointer;
+  border-left: 1px solid #54d98c;
+  float: left;
+  width: 92px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+}
+.navbar-green ul li:first-child {
+  border-left: none;
+}
+.navbar-green ul li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 0.3s linear;
+  -moz-transition: all 0.3s linear;
+  -o-transition: all 0.3s linear;
+  -ms-transition: all 0.3s linear;
+  transition: all 0.3s linear;
+  text-decoration: none;
+  color: white;
+}
+.navbar-green ul li a:hover {
+  color: #25a25a;
+  background-color: #40d47e;
+}
 /* #Import a font
 ================================================== */
 /* #Regular Code
@@ -1399,4 +1475,10 @@ div#title p {
 }
 #colors .color_container div {
   height: 35px;
+}
+#colors .color_container div h2 {
+  text-align: center;
+  line-height: 35px;
+  opacity: 0;
+  cursor: default;
 }
