added icomoon as an easy to use icon font
- Adjusted a bit of the navbar values and added active state
- Added active state and adjusted lettering
- Added font.less to main stylesheet

--- a/styles.less
+++ b/styles.less
@@ -6,6 +6,7 @@
 @import "flatui/mixin.less";
 @import "flatui/form.less";
 @import "flatui/nav.less";
+@import "flatui/font.less";
 
 
 /* #Import a font
