--- a/flatui/nav.css
+++ b/flatui/nav.css
@@ -116,9 +116,9 @@
   cursor: pointer;
   border-left: 1px solid #5faee3;
   float: left;
-  width: 92px;
+  min-width: 92px;
   height: 40px;
-  line-height: 40px;
+  line-height: 46px;
   text-align: center;
 }
 .navbar-reg ul li:first-child {
@@ -143,6 +143,10 @@
   color: #217dbb;
   background-color: #4aa3df;
 }
+.navbar-reg ul li a.active {
+  color: #1d6fa5;
+  background-color: #5faee3;
+}
 .navbar-green {
   width: 100%;
   background: #2ecc71;
@@ -157,9 +161,9 @@
   cursor: pointer;
   border-left: 1px solid #54d98c;
   float: left;
-  width: 92px;
+  min-width: 92px;
   height: 40px;
-  line-height: 40px;
+  line-height: 46px;
   text-align: center;
 }
 .navbar-green ul li:first-child {
@@ -183,4 +187,8 @@
 .navbar-green ul li a:hover {
   color: #25a25a;
   background-color: #40d47e;
+}
+.navbar-green ul li a.active {
+  color: #208e4e;
+  background-color: #54d98c;
 }
