--- a/flatui/nav.less
+++ b/flatui/nav.less
@@ -19,9 +19,9 @@
             cursor: pointer;
             border-left: 1px solid lighten(@color, 10%);
             float: left;
-            width: 92px;
+            min-width: 92px;
             height: 40px;
-            line-height: 40px;
+            line-height: 46px;
             text-align: center;
             a {
                 display: block;
@@ -33,16 +33,13 @@
                 }
                 text-decoration: none;
                 color: white;
+                &.active {
+                    color: darken(@color, 15%);
+                    background-color: lighten(@color, 10%);
+                }
             }
         }
     }
-    
-    
-//    .transition(all, .5s, linear);
-//    &:focus {
-//        border: 1px solid lighten(@color, 25%);
-//        color: darken(@color, 10%);
-//    }
 }
 
 .navbar-reg {
